force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/AcctSeedERP__Comment__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Comment__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>