force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/AcctSeedERP__Initial_Receive_Date__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Initial_Receive_Date__c</fullName>
    <label>Initial Receive Date</label>
    <type>Date</type>
</CustomField>