force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/AcctSeedERP__Ledger_Amount__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Ledger_Amount__c</fullName>
    <formula>IF(ISBLANK(AcctSeedERP__Currency_Conversion_Rate__c) || AcctSeedERP__Currency_Conversion_Rate__c = 0,AcctSeedERP__Total__c,AcctSeedERP__Total__c/AcctSeedERP__Currency_Conversion_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ledger Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>