force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/AcctSeedERP__Shipping_Contact__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Shipping_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>