force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/AcctSeedERP__Type__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Blanket</fullName>
            </value>
            <value>
                <fullName>Drop Shipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>