force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/AcctSeedERP__Vendor_Country__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Vendor_Country__c</fullName>
    <label>Vendor Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>