force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/AcctSeedERP__Vendor_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Vendor_Postal_Code__c</fullName>
    <label>Vendor Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>