force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/AcctSeedERP__Vendor_Street__c.field-meta.xml
<CustomField>
    <fullName>AcctSeedERP__Vendor_Street__c</fullName>
    <label>Vendor Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>