force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Estimated_Time_of_Arrival_ETA__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Time_of_Arrival_ETA__c</fullName>
    <description>The estimated date that the ordered parts will arrive at Legend Boats</description>
    <inlineHelpText>The estimated date that the ordered parts will arrive at Legend Boats</inlineHelpText>
    <label>Estimated Time of Arrival (ETA)</label>
    <type>Date</type>
</CustomField>