force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/GL_Account_Variable_2__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Variable_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Account Variable 2</label>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Purchase Orders (GL Account Variable 2)</relationshipLabel>
    <relationshipName>Purchase_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>