force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/GMBLASERP__Project__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>