force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/GMBLASERP__Project_Task__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Project_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Task</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Project Task must match the Project.</errorMessage>
        <filterItems>
            <field>AcctSeed__Project_Task__c.AcctSeed__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.GMBLASERP__Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>AcctSeed__Project_Task__c</referenceTo>
    <relationshipLabel>Purchase Orders</relationshipLabel>
    <relationshipName>Purchase_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>