force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/P_O_Rating__c.field-meta.xml
<CustomField>
    <fullName>P_O_Rating__c</fullName>
    <description>To rate the POs created.</description>
    <label>P.O. Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perfect</fullName>
            </value>
            <value>
                <fullName>No Approval</fullName>
            </value>
            <value>
                <fullName>Incorrect Stock</fullName>
            </value>
            <value>
                <fullName>Wrong Part</fullName>
                <label>No Allocation</label>
            </value>
            <value>
                <fullName>No P.O.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>