force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Pricebook_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Name__c</fullName>
    <formula>GMBLASERP__Pricebook__r.Name</formula>
    <label>Pricebook Name</label>
    <type>Text</type>
</CustomField>