force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Total_Qty_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty_Ordered__c</fullName>
    <label>Total Qty Ordered</label>
    <summarizedField>AcctSeedERP__Purchase_Order_Line__c.AcctSeedERP__Quantity__c</summarizedField>
    <summaryForeignKey>AcctSeedERP__Purchase_Order_Line__c.AcctSeedERP__Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>