force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Total_Qty_Received_Non_Inv__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty_Received_Non_Inv__c</fullName>
    <label>Total Qty Received Non-Inv</label>
    <summarizedField>AcctSeedERP__Purchase_Order_Line__c.GMBLASERP__Quantity_Received_Non_Inventory__c</summarizedField>
    <summaryForeignKey>AcctSeedERP__Purchase_Order_Line__c.AcctSeedERP__Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>