force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/fields/Total_Qty_Unreceived__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty_Unreceived__c</fullName>
    <formula>BLANKVALUE((Total_Qty_Ordered__c - ( Total_Qty_Received__c +  Total_Qty_Received_Non_Inv__c)), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Qty Unreceived</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>