force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/listViews/AcctSeedERP__All.listView-meta.xml
<ListView>
    <fullName>AcctSeedERP__All</fullName>
    <columns>NAME</columns>
    <columns>AcctSeedERP__Vendor__c</columns>
    <columns>AcctSeedERP__Order_Date__c</columns>
    <columns>AcctSeedERP__Line_Count__c</columns>
    <columns>AcctSeedERP__Total__c</columns>
    <columns>AcctSeedERP__Type__c</columns>
    <columns>AcctSeedERP__Status__c</columns>
    <columns>AcctSeedERP__Comment__c</columns>
    <columns>Pricebook_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeedERP__Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>All</label>
</ListView>