force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/listViews/Active_Open_PO_s_Fully_Received_Public.listView-meta.xml
<ListView>
    <fullName>Active_Open_PO_s_Fully_Received_Public</fullName>
    <columns>NAME</columns>
    <columns>Warehouse__c</columns>
    <columns>Stage__c</columns>
    <columns>AcctSeedERP__Order_Date__c</columns>
    <columns>AcctSeedERP__Vendor__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeedERP__Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>Total_Qty_Unreceived__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Active/Open PO&apos;s Fully Received</label>
</ListView>