force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/listViews/Closed_but_Unlocked_with_Unreceived_0.listView-meta.xml
<ListView>
    <fullName>Closed_but_Unlocked_with_Unreceived_0</fullName>
    <columns>NAME</columns>
    <columns>AcctSeedERP__Status__c</columns>
    <columns>Locked__c</columns>
    <columns>AcctSeedERP__Order_Date__c</columns>
    <columns>AcctSeedERP__Vendor__c</columns>
    <columns>AcctSeedERP__Total__c</columns>
    <columns>Total_Qty_Ordered__c</columns>
    <columns>Total_Qty_Unreceived__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeedERP__Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>Locked__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Total_Qty_Unreceived__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>Closed but Unlocked with Unreceived &lt;&gt; 0</label>
</ListView>