force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/listViews/Mary_s_view.listView-meta.xml
<ListView>
    <fullName>Mary_s_view</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>AcctSeedERP__Total__c</columns>
    <columns>AcctSeedERP__Vendor__c</columns>
    <columns>AcctSeedERP__Vendor_City__c</columns>
    <columns>AcctSeedERP__Order_Date__c</columns>
    <columns>Internal_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Partially Received,Received</value>
    </filters>
    <filters>
        <field>AcctSeedERP__Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Mary&apos;s view</label>
    <language>en_US</language>
</ListView>