force-app/main/default/objects/AcctSeedERP__Purchase_Order__c/listViews/Montreal_Open_POs.listView-meta.xml
<ListView>
    <fullName>Montreal_Open_POs</fullName>
    <columns>NAME</columns>
    <columns>AcctSeedERP__Vendor__c</columns>
    <columns>AcctSeedERP__Order_Date__c</columns>
    <columns>Stage__c</columns>
    <columns>AcctSeedERP__Line_Count__c</columns>
    <columns>AcctSeedERP__Total__c</columns>
    <columns>AcctSeedERP__Status__c</columns>
    <columns>AcctSeedERP__Comment__c</columns>
    <columns>Pricebook_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AcctSeedERP__Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <filters>
        <field>Warehouse__c</field>
        <operation>equals</operation>
        <value>Montreal</value>
    </filters>
    <label>Montreal Open POs</label>
</ListView>